# TimeTracked

./: timetracked-spec.md
tauiru-app/: package-lock.json  package.json
tauiru-app/src/: entries.html  index.html  main.js  preferences.html
tauiru-app/src-tauri/: Cargo.toml  tauri.conf.json
tauiru-app/src-tauri/capabilities/: default.json
tauiru-app/src-tauri/src/: lib.rs  main.rs
