[package]
name = "tauiru-app"
version = "0.1.0"
description = "TimeTracked - Personal time tracking app"
authors = ["you"]
edition = "2021"

[lib]
name = "tauiru_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
csv = "1.3"
